8211163: UNIX version of Java_java_io_Console_echo does not return a clean boolean

Reviewed-by: shade, alanb